--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -11,23 +11,23 @@
 			<div><a class="btn btn-primary btn-lg" href="<%=destroy_attendance_path(@event.id)%>" method="delete">Remove participation</a></div>
 		<%else%>
     		<% if !user_signed_in? %>
-				<p>Connectez-vous pour pouvoir vous inscrire !</p>
+				<p>You have to connect you to apply this event !</p>
 				<br/>
 			  <% else %>
 			  <!-- BOuton pour enregistrer la participation sans payement -->
 			    <% if 1==2 %>
- 					<p class="text-center"> <%= link_to "Rejoindre l'événement", { :controller => "events", :action => "subscribe"}, class: "btn btn-primary btn-lg" %> </p>
+ 					<p class="text-center"> <%= link_to "Joign this event", { :controller => "events", :action => "subscribe"}, class: "btn btn-primary btn-lg" %> </p>
  				<% end %> 
 			  <!-- Code pour afficher bouton stripe  -->
  			<% if @event.admin == current_user  %>
 
-				<span>Vous êtes l'administrateur de cet événement !</span>
- 					<p class="text-center"> <%= link_to "Gérer cet événement", { :controller => "events", :action => "subscribe"}, class: "btn btn-primary btn-lg" %> </p>
+				<span>Your the admin of this event!</span>
+ 						<%= link_to "Manage this event", attendances_path(id: @event.id), class:"btn btn-primary" %>
 				<br/>
 
 				<% elsif @event.users.include?(current_user) %>
 					
-				<span>Vous participez à cet événement !</span>
+				<span>You are allready member of this event!</span>
 				<br/>
 
 				<% else %>
@@ -40,7 +40,7 @@
 					      </div>
 					    <% end %>
 					    <label class="amount">
-					      <span>Pour vous inscrire, merci de passer par la case, payement :<%=@event.price.to_f/100 %> €</span>
+					      <span>To subscribe to this event, pay this :<%=@event.price.to_f/100 %> €</span>
 					    </label>
 					  </article>
 
